docs/7.57/md/abenabap_sxml_lib_abexas.md
---
title: "Continue"
description: |
  !Example(exa.gif 'Example') sXML - Formats(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_formats_abexa.htm) !Example(exa.gif 'Example') sXML - Transformation of Formats(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_format_trafos_abexa.htm) !Exampl
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sxml_lib_abexas.htm"
abapFile: "abenabap_sxml_lib_abexas.htm"
keywords: ["do", "if", "method", "class", "data", "abenabap", "sxml", "lib", "abexas"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Class Libraries](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_libs.htm) →  [sXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sxml_lib.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: sXML - Examples, ABENABAP_SXML_LIB_ABEXAS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D
%0ASuggestion for improvement:)

sXML - Examples

Continue
![Example](exa.gif "Example") [sXML - Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_formats_abexa.htm)
![Example](exa.gif "Example") [sXML - Transformation of Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_format_trafos_abexa.htm)
![Example](exa.gif "Example") [sXML - Token-Based Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_abexa.htm)
![Example](exa.gif "Example") [sXML - Steps in Token-Based Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_steps_abexa.htm)
![Example](exa.gif "Example") [sXML - Methods for Token-Based Parsing.](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_methods_abexa.htm)
![Example](exa.gif "Example") [sXML - Object-Oriented Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_oo_parsing_abexa.htm)
![Example](exa.gif "Example") [sXML - Transformation from XML Reader](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_trafo_from_reader_abexa.htm)
![Example](exa.gif "Example") [sXML - Token-Based Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_rendering_abexa.htm)
![Example](exa.gif "Example") [sXML - Namespace Declarations in Token-Based Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_renderering_ns_abexa.htm)
![Example](exa.gif "Example") [sXML - Object-Oriented Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_oo_rendering_abexa.htm)
![Example](exa.gif "Example") [sXML - Transformation to XML Writer](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_trafo_into_writer_abexa.htm)
![Example](exa.gif "Example") [sXML - Modifying XML Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_reader_writer_abexa.htm)